// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakdown when data is loaded returns the transaction breakdown for a service 1`] = `
Object {
  "timeseries": Array [
    Object {
      "color": "#54b399",
      "data": Array [
        Object {
          "x": 1601389800000,
          "y": 0.0161290322580645,
        },
        Object {
          "x": 1601389830000,
          "y": 0.402597402597403,
        },
        Object {
          "x": 1601389860000,
          "y": 0.0303030303030303,
        },
        Object {
          "x": 1601389890000,
          "y": null,
        },
        Object {
          "x": 1601389920000,
          "y": 0.518072289156627,
        },
        Object {
          "x": 1601389950000,
          "y": 0.120603015075377,
        },
        Object {
          "x": 1601389980000,
          "y": 0.823529411764706,
        },
        Object {
          "x": 1601390010000,
          "y": null,
        },
        Object {
          "x": 1601390040000,
          "y": 0.273381294964029,
        },
        Object {
          "x": 1601390070000,
          "y": 0.39047619047619,
        },
        Object {
          "x": 1601390100000,
          "y": null,
        },
        Object {
          "x": 1601390130000,
          "y": 0.733333333333333,
        },
        Object {
          "x": 1601390160000,
          "y": 0.144230769230769,
        },
        Object {
          "x": 1601390190000,
          "y": 0.0688524590163934,
        },
        Object {
          "x": 1601390220000,
          "y": null,
        },
        Object {
          "x": 1601390250000,
          "y": null,
        },
        Object {
          "x": 1601390280000,
          "y": 0.0540540540540541,
        },
        Object {
          "x": 1601390310000,
          "y": null,
        },
        Object {
          "x": 1601390340000,
          "y": null,
        },
        Object {
          "x": 1601390370000,
          "y": 1,
        },
        Object {
          "x": 1601390400000,
          "y": null,
        },
        Object {
          "x": 1601390430000,
          "y": 0.75,
        },
        Object {
          "x": 1601390460000,
          "y": 0.764705882352941,
        },
        Object {
          "x": 1601390490000,
          "y": 0.117647058823529,
        },
        Object {
          "x": 1601390520000,
          "y": 0.220588235294118,
        },
        Object {
          "x": 1601390550000,
          "y": 0.302325581395349,
        },
        Object {
          "x": 1601390580000,
          "y": null,
        },
        Object {
          "x": 1601390610000,
          "y": null,
        },
        Object {
          "x": 1601390640000,
          "y": null,
        },
        Object {
          "x": 1601390670000,
          "y": 0.215686274509804,
        },
        Object {
          "x": 1601390700000,
          "y": null,
        },
        Object {
          "x": 1601390730000,
          "y": null,
        },
        Object {
          "x": 1601390760000,
          "y": 0.217391304347826,
        },
        Object {
          "x": 1601390790000,
          "y": 0.253333333333333,
        },
        Object {
          "x": 1601390820000,
          "y": null,
        },
        Object {
          "x": 1601390850000,
          "y": 0.117647058823529,
        },
        Object {
          "x": 1601390880000,
          "y": 0.361111111111111,
        },
        Object {
          "x": 1601390910000,
          "y": null,
        },
        Object {
          "x": 1601390940000,
          "y": null,
        },
        Object {
          "x": 1601390970000,
          "y": 0.19047619047619,
        },
        Object {
          "x": 1601391000000,
          "y": 0.354430379746835,
        },
        Object {
          "x": 1601391030000,
          "y": null,
        },
        Object {
          "x": 1601391060000,
          "y": null,
        },
        Object {
          "x": 1601391090000,
          "y": null,
        },
        Object {
          "x": 1601391120000,
          "y": 0.437956204379562,
        },
        Object {
          "x": 1601391150000,
          "y": 0.0175438596491228,
        },
        Object {
          "x": 1601391180000,
          "y": null,
        },
        Object {
          "x": 1601391210000,
          "y": 0.277777777777778,
        },
        Object {
          "x": 1601391240000,
          "y": 1,
        },
        Object {
          "x": 1601391270000,
          "y": 0.885714285714286,
        },
        Object {
          "x": 1601391300000,
          "y": null,
        },
        Object {
          "x": 1601391330000,
          "y": null,
        },
        Object {
          "x": 1601391360000,
          "y": 0.111111111111111,
        },
        Object {
          "x": 1601391390000,
          "y": null,
        },
        Object {
          "x": 1601391420000,
          "y": 0.764705882352941,
        },
        Object {
          "x": 1601391450000,
          "y": null,
        },
        Object {
          "x": 1601391480000,
          "y": 0.0338983050847458,
        },
        Object {
          "x": 1601391510000,
          "y": 0.293233082706767,
        },
        Object {
          "x": 1601391540000,
          "y": null,
        },
        Object {
          "x": 1601391570000,
          "y": null,
        },
        Object {
          "x": 1601391600000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "25%",
      "title": "app",
      "type": "areaStacked",
    },
    Object {
      "color": "#6092c0",
      "data": Array [
        Object {
          "x": 1601389800000,
          "y": 0.983870967741935,
        },
        Object {
          "x": 1601389830000,
          "y": 0.545454545454545,
        },
        Object {
          "x": 1601389860000,
          "y": 0.96969696969697,
        },
        Object {
          "x": 1601389890000,
          "y": null,
        },
        Object {
          "x": 1601389920000,
          "y": 0.156626506024096,
        },
        Object {
          "x": 1601389950000,
          "y": 0.85929648241206,
        },
        Object {
          "x": 1601389980000,
          "y": 0,
        },
        Object {
          "x": 1601390010000,
          "y": null,
        },
        Object {
          "x": 1601390040000,
          "y": 0.482014388489209,
        },
        Object {
          "x": 1601390070000,
          "y": 0.361904761904762,
        },
        Object {
          "x": 1601390100000,
          "y": null,
        },
        Object {
          "x": 1601390130000,
          "y": 0,
        },
        Object {
          "x": 1601390160000,
          "y": 0.759615384615385,
        },
        Object {
          "x": 1601390190000,
          "y": 0.931147540983607,
        },
        Object {
          "x": 1601390220000,
          "y": null,
        },
        Object {
          "x": 1601390250000,
          "y": null,
        },
        Object {
          "x": 1601390280000,
          "y": 0.945945945945946,
        },
        Object {
          "x": 1601390310000,
          "y": null,
        },
        Object {
          "x": 1601390340000,
          "y": null,
        },
        Object {
          "x": 1601390370000,
          "y": 0,
        },
        Object {
          "x": 1601390400000,
          "y": null,
        },
        Object {
          "x": 1601390430000,
          "y": 0,
        },
        Object {
          "x": 1601390460000,
          "y": 0,
        },
        Object {
          "x": 1601390490000,
          "y": 0.784313725490196,
        },
        Object {
          "x": 1601390520000,
          "y": 0.544117647058823,
        },
        Object {
          "x": 1601390550000,
          "y": 0.558139534883721,
        },
        Object {
          "x": 1601390580000,
          "y": null,
        },
        Object {
          "x": 1601390610000,
          "y": null,
        },
        Object {
          "x": 1601390640000,
          "y": null,
        },
        Object {
          "x": 1601390670000,
          "y": 0.784313725490196,
        },
        Object {
          "x": 1601390700000,
          "y": null,
        },
        Object {
          "x": 1601390730000,
          "y": null,
        },
        Object {
          "x": 1601390760000,
          "y": 0.536231884057971,
        },
        Object {
          "x": 1601390790000,
          "y": 0.746666666666667,
        },
        Object {
          "x": 1601390820000,
          "y": null,
        },
        Object {
          "x": 1601390850000,
          "y": 0.735294117647059,
        },
        Object {
          "x": 1601390880000,
          "y": 0.416666666666667,
        },
        Object {
          "x": 1601390910000,
          "y": null,
        },
        Object {
          "x": 1601390940000,
          "y": null,
        },
        Object {
          "x": 1601390970000,
          "y": 0.619047619047619,
        },
        Object {
          "x": 1601391000000,
          "y": 0.518987341772152,
        },
        Object {
          "x": 1601391030000,
          "y": null,
        },
        Object {
          "x": 1601391060000,
          "y": null,
        },
        Object {
          "x": 1601391090000,
          "y": null,
        },
        Object {
          "x": 1601391120000,
          "y": 0.408759124087591,
        },
        Object {
          "x": 1601391150000,
          "y": 0.982456140350877,
        },
        Object {
          "x": 1601391180000,
          "y": null,
        },
        Object {
          "x": 1601391210000,
          "y": 0.648148148148148,
        },
        Object {
          "x": 1601391240000,
          "y": 0,
        },
        Object {
          "x": 1601391270000,
          "y": 0,
        },
        Object {
          "x": 1601391300000,
          "y": null,
        },
        Object {
          "x": 1601391330000,
          "y": null,
        },
        Object {
          "x": 1601391360000,
          "y": 0.888888888888889,
        },
        Object {
          "x": 1601391390000,
          "y": null,
        },
        Object {
          "x": 1601391420000,
          "y": 0,
        },
        Object {
          "x": 1601391450000,
          "y": null,
        },
        Object {
          "x": 1601391480000,
          "y": 0.966101694915254,
        },
        Object {
          "x": 1601391510000,
          "y": 0.676691729323308,
        },
        Object {
          "x": 1601391540000,
          "y": null,
        },
        Object {
          "x": 1601391570000,
          "y": null,
        },
        Object {
          "x": 1601391600000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "65%",
      "title": "http",
      "type": "areaStacked",
    },
    Object {
      "color": "#d36086",
      "data": Array [
        Object {
          "x": 1601389800000,
          "y": 0,
        },
        Object {
          "x": 1601389830000,
          "y": 0.051948051948052,
        },
        Object {
          "x": 1601389860000,
          "y": 0,
        },
        Object {
          "x": 1601389890000,
          "y": null,
        },
        Object {
          "x": 1601389920000,
          "y": 0.325301204819277,
        },
        Object {
          "x": 1601389950000,
          "y": 0.0201005025125628,
        },
        Object {
          "x": 1601389980000,
          "y": 0.176470588235294,
        },
        Object {
          "x": 1601390010000,
          "y": null,
        },
        Object {
          "x": 1601390040000,
          "y": 0.244604316546763,
        },
        Object {
          "x": 1601390070000,
          "y": 0.247619047619048,
        },
        Object {
          "x": 1601390100000,
          "y": null,
        },
        Object {
          "x": 1601390130000,
          "y": 0.266666666666667,
        },
        Object {
          "x": 1601390160000,
          "y": 0.0961538461538462,
        },
        Object {
          "x": 1601390190000,
          "y": 0,
        },
        Object {
          "x": 1601390220000,
          "y": null,
        },
        Object {
          "x": 1601390250000,
          "y": null,
        },
        Object {
          "x": 1601390280000,
          "y": 0,
        },
        Object {
          "x": 1601390310000,
          "y": null,
        },
        Object {
          "x": 1601390340000,
          "y": null,
        },
        Object {
          "x": 1601390370000,
          "y": 0,
        },
        Object {
          "x": 1601390400000,
          "y": null,
        },
        Object {
          "x": 1601390430000,
          "y": 0.25,
        },
        Object {
          "x": 1601390460000,
          "y": 0.235294117647059,
        },
        Object {
          "x": 1601390490000,
          "y": 0.0980392156862745,
        },
        Object {
          "x": 1601390520000,
          "y": 0.235294117647059,
        },
        Object {
          "x": 1601390550000,
          "y": 0.13953488372093,
        },
        Object {
          "x": 1601390580000,
          "y": null,
        },
        Object {
          "x": 1601390610000,
          "y": null,
        },
        Object {
          "x": 1601390640000,
          "y": null,
        },
        Object {
          "x": 1601390670000,
          "y": 0,
        },
        Object {
          "x": 1601390700000,
          "y": null,
        },
        Object {
          "x": 1601390730000,
          "y": null,
        },
        Object {
          "x": 1601390760000,
          "y": 0.246376811594203,
        },
        Object {
          "x": 1601390790000,
          "y": 0,
        },
        Object {
          "x": 1601390820000,
          "y": null,
        },
        Object {
          "x": 1601390850000,
          "y": 0.147058823529412,
        },
        Object {
          "x": 1601390880000,
          "y": 0.222222222222222,
        },
        Object {
          "x": 1601390910000,
          "y": null,
        },
        Object {
          "x": 1601390940000,
          "y": null,
        },
        Object {
          "x": 1601390970000,
          "y": 0.19047619047619,
        },
        Object {
          "x": 1601391000000,
          "y": 0.126582278481013,
        },
        Object {
          "x": 1601391030000,
          "y": null,
        },
        Object {
          "x": 1601391060000,
          "y": null,
        },
        Object {
          "x": 1601391090000,
          "y": null,
        },
        Object {
          "x": 1601391120000,
          "y": 0.153284671532847,
        },
        Object {
          "x": 1601391150000,
          "y": 0,
        },
        Object {
          "x": 1601391180000,
          "y": null,
        },
        Object {
          "x": 1601391210000,
          "y": 0.0740740740740741,
        },
        Object {
          "x": 1601391240000,
          "y": 0,
        },
        Object {
          "x": 1601391270000,
          "y": 0.114285714285714,
        },
        Object {
          "x": 1601391300000,
          "y": null,
        },
        Object {
          "x": 1601391330000,
          "y": null,
        },
        Object {
          "x": 1601391360000,
          "y": 0,
        },
        Object {
          "x": 1601391390000,
          "y": null,
        },
        Object {
          "x": 1601391420000,
          "y": 0.235294117647059,
        },
        Object {
          "x": 1601391450000,
          "y": null,
        },
        Object {
          "x": 1601391480000,
          "y": 0,
        },
        Object {
          "x": 1601391510000,
          "y": 0.0300751879699248,
        },
        Object {
          "x": 1601391540000,
          "y": null,
        },
        Object {
          "x": 1601391570000,
          "y": null,
        },
        Object {
          "x": 1601391600000,
          "y": null,
        },
      ],
      "hideLegend": false,
      "legendValue": "10%",
      "title": "postgresql",
      "type": "areaStacked",
    },
  ],
}
`;

exports[`Breakdown when data is loaded returns the transaction breakdown for a transaction group 9`] = `
Array [
  Object {
    "x": 1601389800000,
    "y": 1,
  },
  Object {
    "x": 1601389830000,
    "y": 1,
  },
  Object {
    "x": 1601389860000,
    "y": 1,
  },
  Object {
    "x": 1601389890000,
    "y": null,
  },
  Object {
    "x": 1601389920000,
    "y": 1,
  },
  Object {
    "x": 1601389950000,
    "y": 1,
  },
  Object {
    "x": 1601389980000,
    "y": null,
  },
  Object {
    "x": 1601390010000,
    "y": null,
  },
  Object {
    "x": 1601390040000,
    "y": 1,
  },
  Object {
    "x": 1601390070000,
    "y": 1,
  },
  Object {
    "x": 1601390100000,
    "y": null,
  },
  Object {
    "x": 1601390130000,
    "y": null,
  },
  Object {
    "x": 1601390160000,
    "y": 1,
  },
  Object {
    "x": 1601390190000,
    "y": 1,
  },
  Object {
    "x": 1601390220000,
    "y": null,
  },
  Object {
    "x": 1601390250000,
    "y": null,
  },
  Object {
    "x": 1601390280000,
    "y": 1,
  },
  Object {
    "x": 1601390310000,
    "y": null,
  },
  Object {
    "x": 1601390340000,
    "y": null,
  },
  Object {
    "x": 1601390370000,
    "y": null,
  },
  Object {
    "x": 1601390400000,
    "y": null,
  },
  Object {
    "x": 1601390430000,
    "y": null,
  },
  Object {
    "x": 1601390460000,
    "y": null,
  },
  Object {
    "x": 1601390490000,
    "y": 1,
  },
  Object {
    "x": 1601390520000,
    "y": 1,
  },
  Object {
    "x": 1601390550000,
    "y": 1,
  },
  Object {
    "x": 1601390580000,
    "y": null,
  },
  Object {
    "x": 1601390610000,
    "y": null,
  },
  Object {
    "x": 1601390640000,
    "y": null,
  },
  Object {
    "x": 1601390670000,
    "y": 1,
  },
  Object {
    "x": 1601390700000,
    "y": null,
  },
  Object {
    "x": 1601390730000,
    "y": null,
  },
  Object {
    "x": 1601390760000,
    "y": 1,
  },
  Object {
    "x": 1601390790000,
    "y": 1,
  },
  Object {
    "x": 1601390820000,
    "y": null,
  },
  Object {
    "x": 1601390850000,
    "y": 1,
  },
  Object {
    "x": 1601390880000,
    "y": 1,
  },
  Object {
    "x": 1601390910000,
    "y": null,
  },
  Object {
    "x": 1601390940000,
    "y": null,
  },
  Object {
    "x": 1601390970000,
    "y": 1,
  },
  Object {
    "x": 1601391000000,
    "y": 1,
  },
  Object {
    "x": 1601391030000,
    "y": null,
  },
  Object {
    "x": 1601391060000,
    "y": null,
  },
  Object {
    "x": 1601391090000,
    "y": null,
  },
  Object {
    "x": 1601391120000,
    "y": 1,
  },
  Object {
    "x": 1601391150000,
    "y": 1,
  },
  Object {
    "x": 1601391180000,
    "y": null,
  },
  Object {
    "x": 1601391210000,
    "y": 1,
  },
  Object {
    "x": 1601391240000,
    "y": null,
  },
  Object {
    "x": 1601391270000,
    "y": null,
  },
  Object {
    "x": 1601391300000,
    "y": null,
  },
  Object {
    "x": 1601391330000,
    "y": null,
  },
  Object {
    "x": 1601391360000,
    "y": 1,
  },
  Object {
    "x": 1601391390000,
    "y": null,
  },
  Object {
    "x": 1601391420000,
    "y": null,
  },
  Object {
    "x": 1601391450000,
    "y": null,
  },
  Object {
    "x": 1601391480000,
    "y": 1,
  },
  Object {
    "x": 1601391510000,
    "y": 1,
  },
  Object {
    "x": 1601391540000,
    "y": null,
  },
  Object {
    "x": 1601391570000,
    "y": null,
  },
  Object {
    "x": 1601391600000,
    "y": null,
  },
]
`;
